--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 .orange-bg{
     background-color: #fceae8;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .carousel-item{
     padding: 20px 40px;
@@ -12,10 +12,50 @@
     color: #FF136F;
 }
 .buy-now-button{
-    background-image: linear-gradient(to bottom,#FF136F 0%, #FF136F 100%);
+    background-image: linear-gradient(to bottom,#ff4d91 0%, #FF136F 100%);
     color: #fff;
     border: none;
     border-radius: 8px;
     padding: 9px 25px;
     cursor: pointer;
+}
+.cat1{
+    background-image: linear-gradient(rgb(255, 196, 0), orange);
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.cat2{
+    background-image: linear-gradient(rgb(255, 87, 115), rgb(247, 21, 59));
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.cat3{
+    background-image: linear-gradient(rgb(76, 0, 255), rgb(91, 35, 245));
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.catagories h1{
+    color: white;
+}
+.catagories img{
+    width: 100px;
+}
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px lightgray;
+    border-radius: 15px;
+}
+.card-footer{
+    background-color: white;
+    border-top: none;
+    border-radius: 10px;
+}
+#subscribe{
+    height: 300px;
+}
+#subscribe h6{
+    color: gray;
+}
+footer{
+    text-align: center;
 }
